After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 776869 - The search sparql query doesn't check if files have nie:url
The search sparql query doesn't check if files have nie:url
Status: RESOLVED FIXED
Product: nautilus
Classification: Core
Component: general
unspecified
Other Linux
: Normal normal
: ---
Assigned To: Nautilus Maintainers
Nautilus Maintainers
Depends on:
Blocks:
 
 
Reported: 2017-01-04 15:59 UTC by Alexandru Pandelea
Modified: 2017-02-03 09:52 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
search-engine-tracker: check in query if files have nie:url (1.92 KB, patch)
2017-01-04 16:01 UTC, Alexandru Pandelea
committed Details | Review

Description Alexandru Pandelea 2017-01-04 15:59:16 UTC
For tracker:uri-is-parent if the nie:url is null, then tracker would give an error.
Comment 1 Alexandru Pandelea 2017-01-04 16:01:14 UTC
Created attachment 342867 [details] [review]
search-engine-tracker: check in query if files have nie:url

For tracker:uri-is-parent if nie:url is null, then tracker would
give an error.

To fix this, before the FILTER, make sure that the file has nie:url.
Comment 2 Carlos Soriano 2017-02-02 17:51:11 UTC
Review of attachment 342867 [details] [review]:

based on discussions in https://bugzilla.gnome.org/show_bug.cgi?id=770944#c17, yes!
Comment 3 Alexandru Pandelea 2017-02-03 09:52:16 UTC
Attachment 342867 [details] pushed as 928b806 - search-engine-tracker: check in query if files have nie:url