search-engine-tracker: check in query if files have nie:url

For tracker:uri-is-parent if nie:url is null, then tracker would
give an error.

To fix this, before the FILTER, make sure that the file has nie:url.

https://bugzilla.gnome.org/show_bug.cgi?id=776869